# python_qa

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
Architect & Strategy/Automation Architecture Design/: AUTOMATION_ARCHITECTURE_DESIGN.md
Architect & Strategy/Diagrams/: CICD_PIPELINE.md  HIGH_LEVEL_ARCHITECTURE.md  SEQUENCE_DIAGRAM.md
Architect & Strategy/Explanation/: TECHNICAL_EXPLANATION.md
automation-framework/: .env.example  .env.mobile.example  .gitignore  .pabotsuitenames  playwright-log.txt  requirements.txt  robot.ini
automation-framework/ci_cd/: Makefile  README.md
automation-framework/ci_cd/docker/: Dockerfile.web-api  docker-compose.yml
automation-framework/ci_cd/github/workflows/: api-tests.yml  full-suite.yml  mobile-tests.yml  web-tests.yml
automation-framework/ci_cd/scripts/: run_api.sh  run_mobile.sh  run_web.sh  setup_device_farm.sh
automation-framework/config/environments/: dev.yaml  mobile_dev.yaml  mobile_production.yaml  mobile_staging.yaml  production.yaml  staging.yaml
automation-framework/dictionary/: generate_dictionary.py  keyword_dictionary.robot  keyword_report.txt
automation-framework/libraries/: __init__.py
automation-framework/libraries/api/: ApiSchemaValidator.py  IndodaxSignerLibrary.py  ResponseValidator.py  indodax_signer.py
automation-framework/libraries/base/: config_manager.py
automation-framework/resources/keywords/api/: api_settings.robot  base_keywords.robot  indodax_private_api.robot  indodax_public_api.robot  test_data_loader.robot
automation-framework/resources/keywords/mobile/: mobile_settings.robot  mobile_test_data.robot
automation-framework/resources/keywords/web/: web_settings.robot  web_test_data.robot
automation-framework/resources/page_objects/mobile/account/: account_keywords.robot  account_locators.robot
automation-framework/resources/page_objects/mobile/auth/: login_keywords.robot  login_locators.robot
automation-framework/resources/page_objects/mobile/common/: common_keywords.robot
automation-framework/resources/page_objects/mobile/home/: home_keywords.robot  home_locators.robot
automation-framework/resources/page_objects/mobile/market/: market_keywords.robot  market_locators.robot
automation-framework/resources/page_objects/mobile/onboarding/: onboarding_keywords.robot  onboarding_locators.robot
automation-framework/resources/page_objects/mobile/payment/: deposit_keywords.robot  deposit_locators.robot  withdraw_keywords.robot  withdraw_locators.robot
automation-framework/resources/page_objects/mobile/portfolio/: portfolio_keywords.robot  portfolio_locators.robot
automation-framework/resources/page_objects/web/: __init__.py  base_page.py  indodax_usdtidr_market_page.py
automation-framework/test_data/api/: base.json  indodax_private_api.json  indodax_public_api.json
automation-framework/test_data/api/schemas/: account_info_schema.json  depth_schema.json  error_schema.json  open_orders_schema.json  ticker_schema.json  trade_response_schema.json  trades_schema.json
automation-framework/test_data/mobile/: search_and_validate_eth.json
automation-framework/test_data/web/: indodax_usdtidr_market.json
automation-framework/tests/api/: indodax_private_api.robot  indodax_public_api.robot  public_api_check_eth.robot
automation-framework/tests/web/: indodax_usdtidr_market.robot
load_test/: HASIL_LOAD_TEST.md  locustfile.py
(+26 files in other folders)
